# kubediag

./: .gitignore  Dockerfile  README.md  dev.sh  main.py  pyproject.toml  run.sh
.github/: copilot-instructions.md
.github/workflows/: build-image.yml
docs/: all_resources.sample.json  cas_response.sample.json
src/kubediag/: env.py  kubernetes.py  main.py  mcp.py
src/kubediag/view/: index.html.j2
